# semantic-pydantic

./: .bumpversion.cfg  .cruft.json  .gitignore  .readthedocs.yml  CITATION.cff  MANIFEST.in  README.md  app.py  demo.py  fields.py  models.py  pyproject.toml  pyproject.toml.rej  requirements.txt  scratch.py  semantic_pydantic.py  tox.ini  wsgi.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  codecov.yml
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst  installation.rst  usage.rst
src/semantic_pydantic/: __init__.py  api.py  czzz.py  version.py
tests/: __init__.py  test_api.py  test_version.py
